--- a/config/database.yml
+++ b/config/database.yml
@@ -43,7 +43,7 @@ test:
   encoding: unicode
   database: eq_spree_test
   pool: 5
-  username: nathanaelmiksis
+  username: nathanael
   password:
 
 production:
@@ -51,5 +51,5 @@ production:
   encoding: unicode
   database: blankapp
   pool: 5
-  username: nathanaelmiksis
+  username: nathanael
   password:
